[fix] layout error on narrow screen.

--- a/_sass/minamino/_base.scss
+++ b/_sass/minamino/_base.scss
@@ -179,6 +179,7 @@ pre {
 .wrapper {
   max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
   max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
+  min-width:		 calc(100% - (#{$spacing-unit} * 2));
   margin-right: auto;
   margin-left: auto;
   padding-right: $spacing-unit;
